publish the basics cleanup images full rewrite things to consider

--- a/containerization-series/03.things-to-consider-in-containers.md
+++ b/containerization-series/03.things-to-consider-in-containers.md
@@ -1,99 +1,132 @@
 # Containerizing IBM ACE: A Blog Series - Things to Consider in Containers
 
-When people talk about running workloads in containers, it’s easy to get swept up in the hype. Containers solve a lot of 
-problems: portability, speed, consistency. But they also reshape old challenges in new ways. This isn’t a “best practices” 
-guide (you won’t find a silver bullet here), but rather a collection of things worth thinking about before they come back 
-to bite you (silver bullet, biting, let’s hope it isn’t a full moon tonight).
+When people talk about running workloads in containers, it’s easy to get caught up in the promise. Portability, speed, 
+consistency. Those benefits are real. But with IBM ACE, containers don’t magically fix your problems. They reshape them 
+into new ones. Nothing too dramatic or unsolvable, but nothing to ignore either.
+
+This isn’t a best practices guide. It’s a heads-up. A few things worth thinking through before they come back to bite. 
+(Silver bullet, biting... let’s just hope it’s not a full moon.)
 
 ## Persistence & State
 
-Containers are ephemeral by nature, but ACE doesn’t always play by that rule. Some parts of the runtime *do* need 
-persistence:
+Containers are supposed to be ephemeral. Spin them up, throw them away, move on. But ACE doesn’t always fit that model. 
+Some parts of the runtime actually need to stick around.
 
-* Logs and monitoring data, you don’t want to lose when a pod restarts.
-* ACE dashboards (including bar file storage), which remain persistent even if the runtime itself is disposable.
-* File processing flows, which often require **network storage** so files can survive restarts and be shared between nodes.
-* MQ messages, which must be persistent to prevent data loss.
+Here’s where persistence still matters:
+- **Logs and monitoring data**. You probably want them to survive restarts.
+- **ACE dashboards and bar file storage**. Technically disposable, but often reused.
+- **File-based message flows**. Need shared network storage so files aren't lost on pod death.
+- **MQ messages**. Must be persistent to avoid data loss.
 
-The point isn’t that persistence (or the lack thereof) is bad. It’s that you need to plan it explicitly rather than relying 
-on the container itself to hold your state. You might end up with a couple of surprises if you don't.
+This isn’t about persistence being “bad” or breaking container rules. It’s about knowing where state matters, and 
+designing for it—on purpose. Skip that, and you’re setting yourself up for surprises. The not-fun kind.
 
 ## Networking
 
-Networking in containers looks simple until you hit production. With ACE, you’ll want to think about:
+Networking in containers looks simple, right up until it isn't. With ACE, a few things tend to get messy if you don’t 
+think them through early.
 
-* **Internal service discovery**: how your ACE runtimes talk to other services and MQ.
-* **Exposing your containers to the outside world**: think ingress, routes, or load balancers. Don’t just “expose 
-everything and hope for the best.” Secure, controlled access matters and it helps if you know the hostnames.
-* For APIs, consider an **API gateway** layered on top of your ACE flows. It adds governance and security beyond just 
-pointing traffic straight at your pods.
+Start with the basics:
+- **Internal service discovery**. How do your ACE runtimes talk to each other, to MQ, to anything else behind the curtain?
+- **External exposure**. Whether you’re using ingress, routes, or load balancers, don't just expose everything and hope for the best. Controlled access matters. And yes, it helps if you know your hostnames ahead of time.
+- **API traffic**. Consider putting an API gateway in front of your flows. It gives you more control, governance, and security than pointing clients directly at your pods.
+
+Networking isn't just plumbing. It decides how ACE connects, scales, and secures its communication. Get this wrong, and you're chasing ghosts in production.
 
 ## Scaling
 
-One of the big promises of containers is easy scaling, but it’s not just a technical decision. With ACE:
+Scaling is one of the biggest promises of containers. But with ACE, it’s not just about what’s technically possible. 
+It’s also about what you can afford.
 
-* You can scale vertically (more resources for a container) or horizontally (more replicas).
-* Autoscaling can help smooth workloads, but watch your licensing model. **More CPU = more PVUs = more money.** Scaling 
-decisions directly affect your bill.
+You’ve got two main levers:
+- **Vertical scaling**. More CPU and memory for each container.
+- **Horizontal scaling**. More replicas of the same container.
 
-The best thing to do is plan for scaling. This directly contracts the whole automatic aspect of autoscaling, but it is the
-only way to keep a firm grip on that purse.
+Autoscaling sounds great on paper. And it works, especially for smoothing out unpredictable workloads. But here’s the 
+catch: more CPU usually means more PVUs (unless you have a very special licensing model). And more PVU means a bigger bill.
 
-So yes, scale when you need to, but don’t ignore the financial side.
+Planning your scaling strategy might feel like it defeats the point of autoscaling. In a way, it does. But if you want to 
+stay in control, technically and financially, you have to plan for it anyway.
+
+So yes, scale when you need to. Just keep an eye on what it’s costing you.
 
 ## Resource Management
 
-ACE can be heavy at startup. If you’ve ever watched a container sit in “pending” or crashloop (or oomrestart), you know 
-what I mean. Setting CPU and memory requests and limits properly avoids the noisy neighbor effect.
+CE runtimes can be heavy at startup, especially in tight environments. If you're seeing containers stuck in “Pending,” 
+“CrashLoop,” or “OOMRestart,” you’re not alone.
 
-And since **Kubernetes 1.33**, you can define **startup resources**: a temporary boost to help pods through initialization 
-before they settle into normal runtime limits. For ACE, that can make a real difference in startup stability. Now we just 
-have to wait for the operator to support this as well.
+The fix usually comes down to proper resource configuration (and code optimizations. Why cure what you can prevent. 
+But that is a whole other discussion). Setting CPU and memory requests and limits is crucial, not only for performance 
+but also to prevent the noisy neighbor effect in shared clusters.
 
-Something else to think about: init containers. A short lived init container (it has to be short lived, sub 15min) might 
-help take some startup load of your actual runtime. You could potentially delegate some compile or initialization tasks
-so that they don't have to be done by the ACE runtime.
+As of Kubernetes 1.33, you can define **startup resources**. These give your pod a temporary boost during initialization 
+before dropping to normal runtime levels. That extra headroom can make a real difference. Now we just need the ACE operator 
+to catch up. And it will. Soon.
+
+Then there are init containers. These run before your main runtime and can handle tasks like compilation or setup, if you 
+use them wisely. Offloading work like that can reduce pressure on the ACE container itself. And if they finish within 
+fifteen minutes, they usually do not count toward your PVU usage. That can add up quickly if you are running large 
+workloads. 
+
+And just to be clear, I am **not** taking any responsibility for how IBM counts your licenses. Use are your own risk and 
+always check with your own account admin.
 
 ## Configuration Management & Secrets
 
-Baking everything into an image works for some setups, but often you’ll want to inject configs dynamically. Common 
-approaches:
+Baking everything into an image can work, especially for simple setups. But most real-world deployments need more 
+flexibility. You usually want to inject configuration at runtime.
 
-* **Environment variables**: simple, but not great for sensitive data. Although you can inject vault credentials into 
-environment variables at container startup, making it more secure and practical.
-* **Mounting ConfigMaps or Secrets**: inject files directly into the container filesystem.
-* **External secret stores**: more advanced, but sometimes worth the setup.
-* **ACE built-in vault**: can be injected via Kubernetes secrets mounted as a file, which lets you integrate ACE’s 
-* native vault with containerized deployments.
+Here are a few common approaches:
+- **Environment variables**. Easy to set, but not great for sensitive data. That said, you can inject vault credentials 
+at container startup, which makes it more secure and practical.
+- **Mounting ConfigMaps or Secrets**. Inject files directly into the container's filesystem. Clean and manageable.
+- **External secret stores**. More setup, but often worth it in complex or regulated environments. Think HashiCorp Vault, 
+AWS Secrets Manager, or Azure Key Vault.
+- **ACE vault**. Can be mounted as a file using Kubernetes secrets. Lets you use ACE’s native vault features in 
+containerized deployments.
 
-Changes are, you'll end up with a combination of the above options. Whichever you pick, make sure it scales across dev, 
-test, and prod without becoming a nightmare to maintain. 
+Chances are, you will end up with a mix of these. Whatever you pick, make sure it works across dev, test, and prod without 
+turning into a config nightmare. You do not want to be troubleshooting a secret mount at two in the morning.
 
 ## Security & Monitoring
 
-If you’re using an operator (like with CP4I), a lot of this is handled for you. If you’re not, you need to think about:
+If you are using an operator or a cloud pak like CP4I, a lot of this is handled for you. If not, you need to think about 
+a few essentials.
 
-* How you’re logging and monitoring containers.
-* Scanning images and keeping base images minimal.
-* Securing secrets beyond just dropping them in environment variables.
+- **Logging and monitoring**. Make sure it is persistent and actually useful.
+- **Image scanning**. Check your base and application images for known vulnerabilities.
+- **Minimal base images**. Smaller is safer. Fewer layers, fewer surprises.
+- **Secret handling**. Do more than drop them into environment variables.
+- **Pipeline scanning**. Think SAST. Don’t let credentials or tokens leak into your builds.
 
-These aren’t optional in production, but they also don’t have to be painful if you build them in from the start.
+None of this is optional in production. But it does not have to be painful. Build it in early and it fades into the 
+background. Wait too long and it becomes technical debt. If you are aiming to shift security left, this is exactly where 
+it starts.
 
 ## But can you choose?
 
-Chances are slim that if you are developing applications you’re also maintaining the container platform. That’s usually 
-done by a dedicated container, cloud, or infra team. So a lot of these topics may already be solved for you. Some might 
-even cause issues (not all solutions play nicely with ACE runtimes, dashboards, or operators). So definitely check with 
-the responsible team and see if they’re open for a healthy discussion. And if you need to raise these questions, maybe 
-this blog can help you frame the conversation.
+Chances are slim that if you are developing applications, you are also maintaining the container platform. That is 
+usually handled by a dedicated containers, cloud, or infra team. So some of these topics may already be solved for you.
 
+At the same time, some solutions might introduce new issues. Not everything plays nicely with ACE runtimes, dashboards, 
+or operators. So check with the responsible team and see if they are open to a healthy discussion.
+
+And if you need to raise these questions, maybe this blog can help you frame the conversation.
 
 ## Closing Note
 
-None of these points are meant to scare you away from containers. They’re meant to spark the right questions before 
-something blows up in production. Containers give you speed and flexibility, but ACE still has real world needs like 
-persistence, security, and predictable scaling. Think of this list as a set of road signs: you don’t have to stop at 
-all of them, but you should at least know they’re coming up.
+None of these points are meant to scare you away from containers. They are meant to spark the right questions before 
+something breaks in production.
+
+Containers give you speed and flexibility. But ACE still needs things like persistence, security, and predictable scaling. 
+Think of this list like road signs. You do not have to stop at all of them, but you should at least know they are coming.
+
+Ask the questions early. It is cheaper than fixing surprises later.
+
+## PS, what about pipelines
+
+There is also plenty to say about artifact storage, git providers, and pipeline platforms. But that is a topic for 
+another time. That rabbit hole deserves its own blog.
 
 ---
 
@@ -105,7 +138,6 @@ For more integration tips and tricks, visit [Integration Designers](https://inte
 
 * Containerizing IBM ACE: A Blog Series – The Basics
 * Containerizing IBM ACE: A Blog Series - Images vs Artifacts
-*
 
 ---
 
