--- a/docs/posts/containerization-series/02.images-vs-artefacts.md
+++ b/docs/posts/containerization-series/02.images-vs-artefacts.md
@@ -126,28 +126,24 @@ you would normally keep separate from the image.
 
 ## Conclusion
 
-This is a highly debatable topic, and everyone has their own view of what the best approach is. Moral of the story: there is no single right answer. It depends on what you are comfortable with, the experience you have available in your organization, and the CI/CD options you have in place.
+This is a highly debatable topic, and everyone has their own view of what the best approach is. Moral of the story: there 
+is no single right answer. It depends on what you are comfortable with, the experience you have available in your 
+organization, and the CI/CD options you have in place.
 
 Both approaches can work and work well. The important thing is to pick the one that fits your context best.
 
-Personally, I keep switching between the two depending on what I’m building and who I’m building it for — and that’s fine. Hopefully this gives you some ideas to chew on for your own setup.
-
----
-
-For more integration tips and tricks, visit [Integration Designers](https://integrationdesigners.com/blog/) and check out our other blog posts.
-
----
+Personally, I keep switching between the two depending on what I’m building and who I’m building it for — and that’s fine. 
+Hopefully this gives you some ideas to chew on for your own setup.
 
 ## Other blogs from the Containerizing IBM ACE series
 
 * [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
-* My Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
-*
+* Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
 
 ---
 
-Special thanks to my colleague and fellow IBMChampion [Kim Meynendonckx](https://community.ibm.com/community/user/people/kim-meynendonckx) 
-for being a sparring partner on these topics (and the cow discussions)
+Special thanks to my colleague and fellow IBMChampion [Kim Meynendonckx](https://community.ibm.com/community/user/people/kim-meynendonckx) for being a sparring partner on these 
+topics (and the cow discussions)
 
 ---
 
