--- a/containerization-series/04.scoping-your-runtime.md
+++ b/containerization-series/04.scoping-your-runtime.md
@@ -1,40 +1,72 @@
 # Containerizing IBM ACE: A Blog Series - Scoping your runtimes
 
-## 1. Performance and startup
+Packing containers isn’t complicated, right? Just throw everything in there. Well, it is. Until it isn’t. Stack too much 
+in one and you overload. Mix fragile with flammable and things get risky. Leave half of it empty and you're wasting capacity. Sound familiar?
 
-Big schemas mean big compile and load times. Treat these as heavy hitters. Measure compile time and cold start so you know the real cost.
+Let’s be real. “One app per container” sounds clean on paper, but you’d be staring at hundreds of containers before lunch.
+So you bundle. But how?
 
-Build and compile at artifact build time where possible. Faster pod starts, fewer surprises.
+The trick is knowing what belongs together and what absolutely doesn't. This post lays out the logic. Grounded, brutal, 
+and battle-tested. How to scope your runtimes without blowing up performance, security, or your own sanity.
 
-Track startup times in a test or uat setup. Set a budget for cold starts and alert when you exceed it.
 
-## 2. Resource interference
+## Performance and startup
 
-Do not put two applications that have nothing to do with each other in the same container. If one goes wild on CPU or memory, the other suffers.
+Some loads are just heavy. You don't toss an engine block into a shipping container without expecting extra handling, 
+extra time, and a few complaints from whoever has to lift it. Same goes for big schemas. They blow up compile times and 
+drag out cold starts.
+That first sentence probably deserves a _that’s what she said_, but we’re being professional. Mostly.
 
-Aim for a clean noisy neighbor boundary. If you cannot explain why two resources share limits, split them.
+So what do you do? You front-load the work. Compile at build time, not runtime. Get those hits out of the way before 
+anything lands in prod. Track cold start behavior in test or UAT. Know what it costs to spin something up. Set a 
+threshold that makes sense for your environment, and alert when you blow past it.
+Curious how to do that? I blogged about that: [Bar Build Commands: Unraveling the Differences](https://community.ibm.com/community/user/blogs/matthias-blomme/2023/05/23/ace-bar-build-commands-unraveling-the-differences)
+
+If you don’t measure startup time, you’re just hoping it’s fast enough. Spoiler: it won’t be.
+
+
+## Resource interference
+
+You wouldn’t pack volatile chemicals next to fresh produce. If one leaks, everything’s toast. Same deal with runtimes. 
+Put two unrelated applications in the same container and one bad actor can tank the whole thing.
+
+A CPU spike in one flow means the other gets starved. A memory leak in some forgotten listener takes down your critical 
+path. Or worse, one flow mounts a file system the other has no business even seeing. Now you’ve got an attack surface no 
+one asked for.
+
+If you can't explain, clearly and in one sentence, why two peas are in the same pod, they shouldn't be.
+“Because we always did it that way” is **NOT** a reason. It's a red flag. If that’s your answer, stop what you’re doing and 
+go fix it. And don’t say it out loud. Ever.
+
+When in doubt, split. Isolation costs less than cleanup.
+
 
 ## 3. Bundling logic
 
-Bundle together when at least one of these is true:
+Bundling isn’t inherently bad. But bundling for the wrong reasons will rot your runtime from the inside out.
+The points below are just that: points. Not rules. Not guarantees. They’re starting positions. Use your brain.
 
-- Same endpoint or interface and same criticality.
+Good reasons to bundle:
+- They hit the same endpoint or interface and have the same criticality.
+- They’re owned and operated by the same team. One team, one runtime is easier to live with.
+- They’re a small set of resources that share a library and get updated together.
+- They’re part of a bigger, tightly coupled setup that moves as one.
+- They’re legacy apps with low change rates or a clear decommission plan. Keeping them together makes cleanup easy. 
+No one wants to babysit a runtime for something that dies next quarter.
 
-- Same owner or operational responsibility. One team, one runtime is easy to live with.
-
-- Small number of resources that share the same library and are updated together.
-
-- Part of a bigger tightly coupled setup
-
-Avoid bundling when any of these are true:
-
-- You plan to scale them differently.
-
-- They have different criticality. Do not mix a payment flow with a reporting job.
-
+Bad reasons to bundle:
+- You want to scale them differently.
+- One is critical, the other isn’t. Don’t mix a payment flow with a reporting job and hope for the best.
 - They handle data with different sensitivity levels.
+- They’re loosely coupled and can fail independently. That’s a feature, not a flaw.
+- You’re ignoring technical spillover. In ACE, if one app needs a feature, ibmint optimize keeps it on for all. One weird 
+edge case, and nine other apps pay for it.
+- You’re bundling out of convenience. Just because two flows came from the same BAR file doesn’t mean they belong together. 
+That’s packaging, not architecture.
+- You’re crossing team boundaries. If the apps don’t share ownership, support, or deployment cadence, you’re building in 
+friction. Someone always ends up blocked.
 
-- They are only loosely coupled and can fail independently.
+If you can’t defend the bundle under fire, it’s not a bundle. It’s baggage.
 
 ## 4. Libraries and shared code
 
