move blog added footer

--- a/containerization-series/04.scoping-your-runtime.md
+++ b/containerization-series/04.scoping-your-runtime.md
@@ -70,6 +70,10 @@ If you can’t defend the bundle under fire, it’s not a bundle. It’s baggage
 
 ## 4. Libraries and shared code
 
+Reusing code is fine, until it isn't. 
+
+
+
 If several tiny resources reuse the same library and you always upgrade them together, they can live together.
 
 If a library update should not affect all resources at once, separate them to reduce the blast radius.
