added links to blogs

--- a/docs/posts/containerization-series/02.images-vs-artefacts.md
+++ b/docs/posts/containerization-series/02.images-vs-artefacts.md
@@ -135,10 +135,15 @@ Both approaches can work and work well. The important thing is to pick the one t
 Personally, I keep switching between the two depending on what I’m building and who I’m building it for — and that’s fine. 
 Hopefully this gives you some ideas to chew on for your own setup.
 
+---
+
 ## Other blogs from the Containerizing IBM ACE series
 
 * [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
-* Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
+* [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
+* [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
+* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes]()
+* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
 
 ---
 
@@ -146,6 +151,7 @@ Special thanks to my colleague and fellow IBMChampion [Kim Meynendonckx](https:/
 topics (and the cow discussions)
 
 ---
+
 
 Written by [Matthias Blomme](https://www.linkedin.com/in/matthiasblomme/)
 
