--- a/docs/posts/containerization-series/03.things-to-consider-in-containers.md
+++ b/docs/posts/containerization-series/03.things-to-consider-in-containers.md
@@ -136,6 +136,9 @@ another time. That rabbit hole deserves its own blog.
 
 * [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
 * [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
+* [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
+* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes]()
+* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
 
 ---
 
