--- a/docs/posts/containerization-series/01.the-basics.md
+++ b/docs/posts/containerization-series/01.the-basics.md
@@ -88,9 +88,11 @@ I’m not going to hand you the “right” answer for each of these. Instead, I
 
 ## Other blogs from the Containerizing IBM ACE series 
 
-* Containerizing IBM ACE: A Blog Series - Images vs Artifacts
-* Containerizing IBM ACE: A Blog Series – Things to Consider in Containers
-* 
+* [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
+* [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
+* [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
+* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes]()
+* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
 
 ---
 
