--- a/containerization-series/04.scoping-your-runtime.md
+++ b/containerization-series/04.scoping-your-runtime.md
@@ -70,34 +70,57 @@ If you can’t defend the bundle under fire, it’s not a bundle. It’s baggage
 
 ## 4. Libraries and shared code
 
-Reusing code is fine, until it isn't. 
+Shared code sounds smart. Until it drags half your runtime down with it.
 
+It only makes sense to keep things together if they actually move together. If one flow needs a fix and you’re afraid to 
+touch the lib because five others might break in the process, that’s not shared. That’s hostage-taking. Stockholm 
+syndrome be damned.
 
+It’s fine to keep flows together if they share a library and always get upgraded together. But don’t pretend one shared 
+dependency means they belong in the same runtime.  If half your flows use one subflow and the other half use another? 
+Don’t lump them together. Split the library and run two runtimes.
 
-If several tiny resources reuse the same library and you always upgrade them together, they can live together.
-
-If a library update should not affect all resources at once, separate them to reduce the blast radius.
-
-Dare to split up your libraries. If 50% of your flows use library subflow A and 50% user library subflow 5, convert this into
-2 seperate libs
+Libraries enable reuse, and that’s great. But when you're managing runtimes, the goal isn’t optimal reuse. It’s control.
 
 ## 5. Scaling strategy
 
-If something must scale out, do not package it with something that does not.
+We can keep this one short.
 
-Prefer one scaling unit per runtime. It keeps autoscaling rules simple and predictable.
+Scaling costs money. So be mindful. Don’t scale if you don’t need to. Next.
+
+Whether it’s horizontal, vertical, or startup scaling (yes, that last one is a teaser, watch for a dedicated blog), 
+if an application needs to scale, separate it from the rest. You don’t scale an app. You scale a container.
 
 ## 6. Security and data sensitivity
 
-Group resources with similar sensitivity and trust level.
+Not all data is created equal. And not all flows should live next to each other.
 
-Do not bundle a sensitive flow with a less secure one if that weakens the overall posture or complicates audits.
+If one flow handles sensitive data and the other doesn’t, keep them apart. Don’t let a sloppy debug endpoint or overly 
+verbose log expose your payroll system. Same goes for trust boundaries. If the security level isn't the same, split it. 
+And if bundling makes audits harder to explain, it’s probably the wrong setup.
+
+Security isn’t where you get clever. Keep things predictable and contained.Not all data is created equal. And not all 
+flows should live next to each other.
+
+If one flow handles sensitive data and the other doesn’t, keep them apart. Don’t let a sloppy debug endpoint or overly 
+verbose log expose your payroll system. Same goes for trust boundaries. If the security level isn't the same, split it. 
+And if bundling makes audits harder to explain, it’s probably the wrong setup.
+
+Security isn’t where you get clever. Keep things predictable and contained.
 
 ## 7. Ownership and operations
 
-Group by support boundary. If the on call or deployment cadence is different, split.
+A runtime is one unit. You restart it. You redeploy it. You roll it back. Everything inside gets hit.
 
-Align runtime boundaries with who deploys, who monitors, and who fixes.
+So if multiple teams own different apps, don’t shove them into the same container. You’ll spend more time figuring out
+who’s on call and when you're even allowed to fix the issue than actually fixing the issue. Different owners means 
+different responsibilities. Keep those lines sharp.
+
+Same goes for update strategy. You don’t patch a container. You rebuild it and restart it. That means even the untouched 
+apps get bounced. If one team ships weekly and another ships quarterly, someone’s going to be caught in the crossfire.
+
+Runtime boundaries should follow ownership and release patterns. If they don’t, enjoy the finger-pointing. If you ever 
+find a patch window.
 
 ## 8. Coupling level
 
