--- a/containerization-series/04.scoping-your-runtime.md
+++ b/containerization-series/04.scoping-your-runtime.md
@@ -162,3 +162,25 @@ difference bites you during deployment.
 **Upgrade cadence**<br />
 If one app gets updated weekly and another only once a quarter, split them. You don’t want stable apps getting rebooted 
 every time someone else ships a fix.
+
+## Final note
+
+Whatever you do, or however you do it, scope your runtimes with intent.
+If you're bundling by accident or just filling up runtimes, you're doing it wrong.
+
+---
+
+## Other blogs from the Containerizing IBM ACE series
+
+* [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
+* [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
+* [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
+* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes]()
+* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
+
+---
+
+Written by [Matthias Blomme](https://www.linkedin.com/in/matthiasblomme/) and [Kim Meynendonckx](https://community.ibm.com/community/user/people/kim-meynendonckx)
+
+\#IBMChampion \
+\#AppConnectEnterprise(ACE)
